--- a/FitnessMantra/res/values/strings.xml
+++ b/FitnessMantra/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Body Mass Index</string>
+    <string name="app_name">Fitness Mantra</string>
     
     <string name="heightLabel">Height</string>
     <string name="calculateButton">Calculate</string>
