--- a/SalesManagement/res/values-de/strings.xml
+++ b/SalesManagement/res/values-de/strings.xml
@@ -86,7 +86,7 @@
 	<string name="zerozerostring">00</string>
 	<string name="zerostring">0</string>
 	<string name="dollarstring">$</string>
-	<string name="fivezerostring">00000</string>
+	<string name="fourzerostring">0000</string>
 	<string name="internetaccesserrormessage">You are not connected to Internet, please connect</string>
 	
 		
