--- a/SalesManagement/res/values/strings.xml
+++ b/SalesManagement/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="optionCButtonText">C</string>
     <string name="optionDButtonText">D</string>
     <string name="title_activity_optimal_solution">OptimalSolution</string>
+    <string name="generatingtravelpathmessage">Generating Travel Path .... Please Wait</string>
     
     <!-- Messages, Warnings, Error, Information -->
     
@@ -85,7 +86,7 @@
 	<string name="zerozerostring">00</string>
 	<string name="zerostring">0</string>
 	<string name="dollarstring">$</string>
-	<string name="fivezerostring">00000</string>
+	<string name="fourzerostring">0000</string>
 	<string name="internetaccesserrormessage">You are not connected to Internet, please connect</string>
 
 </resources>
